--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>❤❤❤Rishabh's personal site❤❤❤</title>
   </head>
   <body>
-      <img src="C:\Users\LENOVO\Desktop\web development\HTML - Personal Site\37268474-fake-human-circle-img.png" alt="image can't be loaded">
+      <img src="37268474-fake-human-circle-img.png" alt="image can't be loaded">
       <h1>Rishabh Tiwari</h1>
       <p><em><strong>founder and ceo of <a href="https://www.bugatti.com/">bugatti</a></strong></em></p>
       <p>I am an ios and a web developer. I love to have coffee and eat pasta.</p>
@@ -58,7 +58,7 @@
       <!-- sidewise placing the objects -->
       <table cellspacing = "20">
         <tr>
-          <td><img src="C:\Users\LENOVO\Desktop\web development\HTML - Personal Site\37268474-fake-human-circle-img.png" alt="nothing to show"></td>
+          <td><img src="37268474-fake-human-circle-img.png" alt="nothing to show"></td>
           <td>
             <h1>Rishabh Tiwari</h1>
             <p><em><strong>founder and ceo of <a href="https://www.bugatti.com/">bugatti</a></strong></em></p>
